// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenAPIChangelog ChangeList ChangeList renders all version changelog correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  margin-top: 32px;
}

.emotion-2 {
  width: 100%;
  margin-top: 28px;
}

.emotion-4 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 24px;
  line-height: 32px;
  font-weight: 500;
  color: #001E2B;
}

.emotion-5 {
  width: 100%;
  margin: 22px 0;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 5px;
}

@media only screen and (max-width: 767px) {
  .emotion-7 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
  }
}

.emotion-9 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
}

.emotion-9:hover,
.emotion-9:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-9:focus {
  text-decoration-color: #016BF8;
}

.emotion-10 {
  color: var(--color);
  word-break: break-all;
}

.emotion-12 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 18px;
  line-height: 24px;
  font-weight: 700;
  color: #001E2B;
}

.emotion-13 {
  margin-top: 2px;
}

.emotion-15 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  border-radius: 24px;
  height: 18px;
  padding-left: 6px;
  padding-right: 6px;
  text-transform: uppercase;
  border: 1px solid;
  letter-spacing: 0.4px;
  background-color: #FFEAE5;
  border-color: #FFCDC7;
  color: #970606;
}

.emotion-16 {
  margin: 0;
  list-style-position: start;
}

.emotion-18 {
  margin-top: 12px;
  line-height: 28px;
}

.emotion-51 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  border-radius: 24px;
  height: 18px;
  padding-left: 6px;
  padding-right: 6px;
  text-transform: uppercase;
  border: 1px solid;
  letter-spacing: 0.4px;
  background-color: #E3FCF7;
  border-color: #C0FAE6;
  color: #00684A;
}

.emotion-56 {
  position: relative;
}

.emotion-57 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 5px;
  margin-right: 5px;
}

.emotion-59 {
  color: #DB3030;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    <section
      class="emotion-2 emotion-3"
    >
      <h2
        class="emotion-4"
      >
        01 February 2024 Release
      </h2>
      <div
        class="emotion-5 emotion-6"
        data-testid="resource-changes-block"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <a
            class="lg-ui-0001 emotion-9"
            href="//0/#tag/Alert-Configurations/operation/updateAlertConfiguration"
            target="_self"
          >
            <span>
              <h6
                class="emotion-10 emotion-11 emotion-12"
                style="--color: #016BF8;"
              >
                PUT /api/atlas/v2/groups/{groupId}/alertConfigs/{alertConfigId}
              </h6>
            </span>
          </a>
          <div
            class="emotion-13 emotion-14 emotion-15"
          >
            Removed
          </div>
        </div>
        <ul
          class="emotion-16 emotion-17"
        >
          <li
            class="emotion-18 emotion-19"
          >
            Resource version 2023-01-01 was removed, latest available resource version is 2023-02-01
          </li>
        </ul>
      </div>
    </section>
    <section
      class="emotion-2 emotion-3"
    >
      <h2
        class="emotion-4"
      >
        01 February 2024 Release
      </h2>
      <div
        class="emotion-5 emotion-6"
        data-testid="resource-changes-block"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <a
            class="lg-ui-0001 emotion-9"
            href="//0/#tag/Alert-Configurations/operation/updateAlertConfiguration"
            target="_self"
          >
            <span>
              <h6
                class="emotion-10 emotion-11 emotion-12"
                style="--color: #016BF8;"
              >
                PUT /api/atlas/v2/groups/{groupId}/alertConfigs/{alertConfigId}
              </h6>
            </span>
          </a>
          <div
            class="emotion-13 emotion-14 emotion-15"
          >
            Removed
          </div>
        </div>
        <ul
          class="emotion-16 emotion-17"
        >
          <li
            class="emotion-18 emotion-19"
          >
            This change should really definitely be hidden
          </li>
        </ul>
      </div>
    </section>
    <section
      class="emotion-2 emotion-3"
    >
      <h2
        class="emotion-4"
      >
        01 February 2023 Release
      </h2>
      <div
        class="emotion-5 emotion-6"
        data-testid="resource-changes-block"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <a
            class="lg-ui-0001 emotion-9"
            href="//0/#tag/Projects/operation/getProjectByName"
            target="_self"
          >
            <span>
              <h6
                class="emotion-10 emotion-11 emotion-12"
                style="--color: #016BF8;"
              >
                GET /api/atlas/v2/groups/byName/{groupName}
              </h6>
            </span>
          </a>
          <div
            class="emotion-13 emotion-14 emotion-51"
          >
            Released
          </div>
        </div>
        <ul
          class="emotion-16 emotion-17"
        >
          <li
            class="emotion-18 emotion-19"
          >
            <div
              class="emotion-56 emotion-57 emotion-58"
            >
              <svg
                aria-label="Important With Circle Icon"
                class="emotion-59"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM7 4.5C7 3.94772 7.44772 3.5 8 3.5C8.55228 3.5 9 3.94772 9 4.5V8.5C9 9.05228 8.55228 9.5 8 9.5C7.44772 9.5 7 9.05228 7 8.5V4.5ZM9 11.5C9 12.0523 8.55228 12.5 8 12.5C7.44772 12.5 7 12.0523 7 11.5C7 10.9477 7.44772 10.5 8 10.5C8.55228 10.5 9 10.9477 9 11.5Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            Resource version added.
          </li>
        </ul>
      </div>
      <div
        class="emotion-5 emotion-6"
        data-testid="resource-changes-block"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <a
            class="lg-ui-0001 emotion-9"
            href="//0/#tag/Alert-Configurations/operation/updateAlertConfiguration"
            target="_self"
          >
            <span>
              <h6
                class="emotion-10 emotion-11 emotion-12"
                style="--color: #016BF8;"
              >
                PUT /api/atlas/v2/groups/{groupId}/alertConfigs/{alertConfigId}
              </h6>
            </span>
          </a>
          <div
            class="emotion-13 emotion-14 emotion-51"
          >
            Released
          </div>
        </div>
        <ul
          class="emotion-16 emotion-17"
        >
          <li
            class="emotion-18 emotion-19"
          >
            <div
              class="emotion-56 emotion-57 emotion-58"
            >
              <svg
                aria-label="Important With Circle Icon"
                class="emotion-59"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM7 4.5C7 3.94772 7.44772 3.5 8 3.5C8.55228 3.5 9 3.94772 9 4.5V8.5C9 9.05228 8.55228 9.5 8 9.5C7.44772 9.5 7 9.05228 7 8.5V4.5ZM9 11.5C9 12.0523 8.55228 12.5 8 12.5C7.44772 12.5 7 12.0523 7 11.5C7 10.9477 7.44772 10.5 8 10.5C8.55228 10.5 9 10.9477 9 11.5Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            This change should be hidden
          </li>
          <li
            class="emotion-18 emotion-19"
          >
            <div
              class="emotion-56 emotion-57 emotion-58"
            >
              <svg
                aria-label="Important With Circle Icon"
                class="emotion-59"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM7 4.5C7 3.94772 7.44772 3.5 8 3.5C8.55228 3.5 9 3.94772 9 4.5V8.5C9 9.05228 8.55228 9.5 8 9.5C7.44772 9.5 7 9.05228 7 8.5V4.5ZM9 11.5C9 12.0523 8.55228 12.5 8 12.5C7.44772 12.5 7 12.0523 7 11.5C7 10.9477 7.44772 10.5 8 10.5C8.55228 10.5 9 10.9477 9 11.5Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            Resource version added.
          </li>
          <li
            class="emotion-18 emotion-19"
          >
            <div
              class="emotion-56 emotion-57 emotion-58"
            >
              <svg
                aria-label="Important With Circle Icon"
                class="emotion-59"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM7 4.5C7 3.94772 7.44772 3.5 8 3.5C8.55228 3.5 9 3.94772 9 4.5V8.5C9 9.05228 8.55228 9.5 8 9.5C7.44772 9.5 7 9.05228 7 8.5V4.5ZM9 11.5C9 12.0523 8.55228 12.5 8 12.5C7.44772 12.5 7 12.0523 7 11.5C7 10.9477 7.44772 10.5 8 10.5C8.55228 10.5 9 10.9477 9 11.5Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            For the 'query' request parameter 'clusterName', default value was changed from 'default' to 'cluster0'
          </li>
          <li
            class="emotion-18 emotion-19"
          >
            Added the optional property 'links' in the response with the '200' status.
          </li>
          <li
            class="emotion-18 emotion-19"
          >
            <div
              class="emotion-56 emotion-57 emotion-58"
            >
              <svg
                aria-label="Important With Circle Icon"
                class="emotion-59"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM7 4.5C7 3.94772 7.44772 3.5 8 3.5C8.55228 3.5 9 3.94772 9 4.5V8.5C9 9.05228 8.55228 9.5 8 9.5C7.44772 9.5 7 9.05228 7 8.5V4.5ZM9 11.5C9 12.0523 8.55228 12.5 8 12.5C7.44772 12.5 7 12.0523 7 11.5C7 10.9477 7.44772 10.5 8 10.5C8.55228 10.5 9 10.9477 9 11.5Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            Deprecated by resource version 2023-02-01 and marked for removal for 2024-02-01.
          </li>
        </ul>
      </div>
      <div
        class="emotion-5 emotion-6"
        data-testid="resource-changes-block"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <a
            class="lg-ui-0001 emotion-9"
            href="//0/#tag/Project-IP-Access-List/operation/createProjectIpAccessList"
            target="_self"
          >
            <span>
              <h6
                class="emotion-10 emotion-11 emotion-12"
                style="--color: #016BF8;"
              >
                POST /api/atlas/v2/groups/{groupId}/accessList
              </h6>
            </span>
          </a>
          <div
            class="emotion-13 emotion-14 emotion-51"
          >
            Updated
          </div>
        </div>
        <ul
          class="emotion-16 emotion-17"
        >
          <li
            class="emotion-18 emotion-19"
          >
            Added the optional property 'name' in the response with the '200' status.
          </li>
          <li
            class="emotion-18 emotion-19"
          >
            Added the optional property 'comment' in the response with the '200' status.
          </li>
        </ul>
      </div>
    </section>
    <section
      class="emotion-2 emotion-3"
    >
      <h2
        class="emotion-4"
      >
        22 February 2023 Release
      </h2>
      <div
        class="emotion-5 emotion-6"
        data-testid="resource-changes-block"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <a
            class="lg-ui-0001 emotion-9"
            href="//0/#tag/Projects/operation/getProjectByName"
            target="_self"
          >
            <span>
              <h6
                class="emotion-10 emotion-11 emotion-12"
                style="--color: #016BF8;"
              >
                GET /api/atlas/v2/groups/byName/{groupName}
              </h6>
            </span>
          </a>
          <div
            class="emotion-13 emotion-14 emotion-51"
          >
            Updated
          </div>
        </div>
        <ul
          class="emotion-16 emotion-17"
        >
          <li
            class="emotion-18 emotion-19"
          >
            Added the optional property 'withDefaultAlertsSettings' in the response with the '200' status.
          </li>
        </ul>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`OpenAPIChangelog ChangeList ChangeList renders diff changelog correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  margin-top: 32px;
}

.emotion-2 {
  width: 100%;
  margin: 22px 0;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 5px;
}

@media only screen and (max-width: 767px) {
  .emotion-4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
  }
}

.emotion-6 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-6:focus {
  text-decoration-color: #016BF8;
}

.emotion-7 {
  color: var(--color);
  word-break: break-all;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 18px;
  line-height: 24px;
  font-weight: 700;
  color: #001E2B;
}

.emotion-10 {
  margin: 0;
  list-style-position: start;
}

.emotion-12 {
  margin-top: 12px;
  line-height: 28px;
}

.emotion-14 {
  position: relative;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 5px;
  margin-right: 5px;
}

.emotion-17 {
  color: #DB3030;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      data-testid="resource-changes-block"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <a
          class="lg-ui-0001 emotion-6"
          href="//0/#tag/Federated-Authentication/operation/listConnectedOrgConfigs"
          target="_self"
        >
          <span>
            <h6
              class="emotion-7 emotion-8 emotion-9"
              style="--color: #016BF8;"
            >
              GET /api/atlas/v2/federationSettings/{federationSettingsId}/connectedOrgConfigs
            </h6>
          </span>
        </a>
      </div>
      <ul
        class="emotion-10 emotion-11"
      >
        <li
          class="emotion-12 emotion-13"
        >
          <div
            class="emotion-14 emotion-15 emotion-16"
          >
            <svg
              aria-label="Important With Circle Icon"
              class="emotion-17"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM7 4.5C7 3.94772 7.44772 3.5 8 3.5C8.55228 3.5 9 3.94772 9 4.5V8.5C9 9.05228 8.55228 9.5 8 9.5C7.44772 9.5 7 9.05228 7 8.5V4.5ZM9 11.5C9 12.0523 8.55228 12.5 8 12.5C7.44772 12.5 7 12.0523 7 11.5C7 10.9477 7.44772 10.5 8 10.5C8.55228 10.5 9 10.9477 9 11.5Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          A change
        </li>
        <li
          class="emotion-12 emotion-13"
        >
          <div
            class="emotion-14 emotion-15 emotion-16"
          >
            <svg
              aria-label="Important With Circle Icon"
              class="emotion-17"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM7 4.5C7 3.94772 7.44772 3.5 8 3.5C8.55228 3.5 9 3.94772 9 4.5V8.5C9 9.05228 8.55228 9.5 8 9.5C7.44772 9.5 7 9.05228 7 8.5V4.5ZM9 11.5C9 12.0523 8.55228 12.5 8 12.5C7.44772 12.5 7 12.0523 7 11.5C7 10.9477 7.44772 10.5 8 10.5C8.55228 10.5 9 10.9477 9 11.5Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          Removed the non-success response with the status '400'.
        </li>
        <li
          class="emotion-12 emotion-13"
        >
          Added the new optional 'query' request parameter 'envelope'.
        </li>
        <li
          class="emotion-12 emotion-13"
        >
          This change should be hidden!
        </li>
        <li
          class="emotion-12 emotion-13"
        >
          <div
            class="emotion-14 emotion-15 emotion-16"
          >
            <svg
              aria-label="Important With Circle Icon"
              class="emotion-17"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM7 4.5C7 3.94772 7.44772 3.5 8 3.5C8.55228 3.5 9 3.94772 9 4.5V8.5C9 9.05228 8.55228 9.5 8 9.5C7.44772 9.5 7 9.05228 7 8.5V4.5ZM9 11.5C9 12.0523 8.55228 12.5 8 12.5C7.44772 12.5 7 12.0523 7 11.5C7 10.9477 7.44772 10.5 8 10.5C8.55228 10.5 9 10.9477 9 11.5Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          This change should be hidden!
        </li>
      </ul>
    </div>
    <div
      class="emotion-2 emotion-3"
      data-testid="resource-changes-block"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <a
          class="lg-ui-0001 emotion-6"
          href="//0/#tag/Project-IP-Access-List/operation/createProjectIpAccessList"
          target="_self"
        >
          <span>
            <h6
              class="emotion-7 emotion-8 emotion-9"
              style="--color: #016BF8;"
            >
              POST /api/atlas/v2/groups/{groupId}/accessList
            </h6>
          </span>
        </a>
      </div>
      <ul
        class="emotion-10 emotion-11"
      >
        <li
          class="emotion-12 emotion-13"
        >
          <div
            class="emotion-14 emotion-15 emotion-16"
          >
            <svg
              aria-label="Important With Circle Icon"
              class="emotion-17"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM7 4.5C7 3.94772 7.44772 3.5 8 3.5C8.55228 3.5 9 3.94772 9 4.5V8.5C9 9.05228 8.55228 9.5 8 9.5C7.44772 9.5 7 9.05228 7 8.5V4.5ZM9 11.5C9 12.0523 8.55228 12.5 8 12.5C7.44772 12.5 7 12.0523 7 11.5C7 10.9477 7.44772 10.5 8 10.5C8.55228 10.5 9 10.9477 9 11.5Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          Removed the required property 'name' from the response with the '200' status.
        </li>
        <li
          class="emotion-12 emotion-13"
        >
          <div
            class="emotion-14 emotion-15 emotion-16"
          >
            <svg
              aria-label="Important With Circle Icon"
              class="emotion-17"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM7 4.5C7 3.94772 7.44772 3.5 8 3.5C8.55228 3.5 9 3.94772 9 4.5V8.5C9 9.05228 8.55228 9.5 8 9.5C7.44772 9.5 7 9.05228 7 8.5V4.5ZM9 11.5C9 12.0523 8.55228 12.5 8 12.5C7.44772 12.5 7 12.0523 7 11.5C7 10.9477 7.44772 10.5 8 10.5C8.55228 10.5 9 10.9477 9 11.5Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          Removed the required property 'name' from the response with the '200' status.
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
